correction BAMAgentCL, creation d'un thread pour le lancement de serveur, ajout localhost dans file conf